--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-local-authentication": "~16.0.4",
-    "expo-linear-gradient": "~14.1.4"
+    "expo-linear-gradient": "~14.1.4",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
