--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
-    "expo": "~53.0.9",
+    "axios": "^1.9.0",
+    "expo": "~53.0.0",
     "expo-av": "^15.1.5",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
@@ -29,7 +31,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
     "expo-local-authentication": "~16.0.4",
-    "expo-notifications": "~0.31.2",
+    "expo-notifications": "~0.31.3",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
